syntax = "proto3";

package stock;
option go_package = "./proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service StockService {
  rpc ListStocks(google.protobuf.Empty) returns (StockCodes);
  rpc ToggleStocks(stream StockSubscription) returns (StockCodes);
  rpc ListSubscriptions(google.protobuf.Empty) returns (stream StockCode);
  rpc LiveStock(stream StockSubscription) returns (stream StockPrices);
}

message StockCode {
  string stock_code = 1;
}

message StockCodes {
  repeated string stock_codes = 1;
}

message StockSubscription {
  string stock_code = 1;
  bool is_enabled = 2;
}

message StockPrices {
  map<string, StockPrice> stock_prices = 1;
}

message StockPrice {
  int64 price = 1;
  google.protobuf.Timestamp timestamp = 2;
}